--- a/app/src/main/res/values-v23/themes.xml
+++ b/app/src/main/res/values-v23/themes.xml
@@ -1,5 +1,6 @@
+<?xml version="1.0" encoding="utf-8"?>
 <resources xmlns:tools="http://schemas.android.com/tools">
-    <!-- Base application theme. -->
+
     <style name="Theme.KotlinNoteApp" parent="Theme.MaterialComponents.DayNight.NoActionBar">
         <!-- Primary brand color. -->
         <item name="colorPrimary">@color/primary_color</item>
@@ -10,20 +11,8 @@
         <item name="colorSecondaryVariant">@color/teal_700</item>
         <item name="colorOnSecondary">@color/black</item>
         <!-- Status bar color. -->
+        <item name="android:windowLightStatusBar">true</item>
         <item name="android:statusBarColor" tools:targetApi="l">@color/status_bar</item>
         <!-- Customize your theme here. -->
-    </style>
-
-    <style name="Theme.KotlinNoteApp.TextField">
-        <item name="fontFamily">@font/poppins</item>
-        <item name="android:strokeColor">@color/primary_color</item>
-    </style>
-
-    <style name="RadioTheme" parent="Base.Widget.AppCompat.CompoundButton.CheckBox">
-        <item name="android:textColor">@drawable/radio_selector</item>
-        <item name="textFillColor">@drawable/radio_selector</item>
-        <item name="buttonTint">@drawable/radio_selector</item>
-        <item name="android:textSize">16sp</item>
-        <item name="fontFamily">@font/poppins</item>
     </style>
 </resources>
