--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,10 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <color name="purple_200">#FFBB86FC</color>
-    <color name="purple_500">#FF6200EE</color>
-    <color name="purple_700">#FF3700B3</color>
+    <color name="primary_color">#FF2A83DB</color>
+    <color name="primary_color_dark">#064078</color>
+    <color name="divider_color">#FFE5E0E0</color>
     <color name="teal_200">#FF03DAC5</color>
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+    <color name="card_color">#FFF6F1F1</color>
+    <color name="icon_color">#FF6A6868</color>
+    <color name="status_bar">#FFffffff</color>
+    <color name="text_color">#FF707070</color>
 </resources>
