--- a/app/src/main/res/layouts/activities/layout/activity_note_list.xml
+++ b/app/src/main/res/layouts/activities/layout/activity_note_list.xml
@@ -4,7 +4,7 @@
     android:layout_height="match_parent"
     xmlns:tools="http://schemas.android.com/tools"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    tools:context=".notelistpage.NoteListActivity">
+    tools:context=".view.notelistpage.NoteListActivity">
 
     <androidx.appcompat.widget.LinearLayoutCompat
         android:layout_marginTop="30dp"
